@@ -1,3 +1,4 @@
+FR0010285965;1000MERCIS;ALMIL;ALTERNEXT;EUR;PAR;FR
 FR0000124141;VEOLIA ENVIRON.;VIE;EURONEXT;EUR;PAR;FR
 NL0000400653;GEMALTO;GTO;EURONEXT;EUR;PAR;NL
 FR0000073272;SAFRAN;SAF;EURONEXT;EUR;PAR;FR
